# awesome-todo

./: docker-compose.yml
backend/: Cargo.toml  Dockerfile  models.rs
backend/migrations/2024-01-08-112947_create_users/: up.sql
backend/src/: email.rs  generator.rs  hasher.rs  main.rs  models.rs  postgres.rs  schema.rs
backend/src/models/: user.rs
backend/src/routes/: mod.rs  verify_email.rs
frontend/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  main.tsx
frontend/src/components/: auth-provider.tsx  footer.tsx  landing-menu.tsx
frontend/src/components/forms/: auth-form.tsx
frontend/src/components/ui/: typography.tsx
frontend/src/lib/: constants.ts
frontend/src/pages/: landing.tsx
frontend/src/routes/: Header.svelte
nginx/: nginx.conf
