[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.110"
env_logger = "0.10.1"
dotenv = "0.15.0"
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
futures-util = "0.3.30"
r2d2 = "0.8.10"
pwhash = "1.0.0"